<resources>
    <string name="app_name">PolyBazaar</string>
    <string name="email_not_verified">Your e-mail address has not been verified yet</string>
    <string name="verify_email">Re-send Verification E-mail</string>
    <string name="verification_not_working">E-mail verified?</string>
    <string name="authentication_successful">Authentication was successful!</string>
    <string name="verify_credentials">Please verify your credentials!</string>
    <string name="alert_close">Back</string>
    <string name="signup_error">E-mail already registered</string>
    <string name="signup_passwords_not_matching">Please make sure that both passwords match</string>
    <string name="signup_passwords_weak">Please enter a stronger password</string>
    <string name="signup_email_invalid">Please enter a valid EPFL e-mail address</string>
    <string name="signup_nickname_invalid">Please enter a valid nickname</string>
    <string name="verification_email_sent">Verification e-mail sent</string>
    <string name="verification_email_fail">Unable to send verification e-mail. A verification e-mail has probably been sent already. Check your inbox and try again in a few minutes</string>
    <string name="reload_fail">Unable to reload</string>
    <string name="contact_the_seller">Contact Seller</string>
    <string name="title">Listing Title</string>
    <string name="sales_overview">Sales overview</string>
    <string name="add_new_listing">Add new listing</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_required">You have to sign in to use that functionality</string>
    <string name="welcome_message">Welcome to PolyBazaar!</string>
    <string name="search">Search</string>
    <string name="latest_items"><b>Latest items</b></string>
    <string name="select_category">Select a category</string>
    <string name="select_filter">Filter</string>
    <string name="filter">Filter</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">You don\'t have any saved favorites</string>
    <string name="no_created_listings">You haven\'t created any listing</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">Permission Denied</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Permission Rationale Location</string>
    <string name="my_location">Find my location</string>
    <string name="add_MP">Define A Meeting Point</string>
    <string name="change_MP">Change/Remove Meeting Point</string>
    <string name="submit_listing">Submit Listing</string>
    <string name="see_MP">See Meeting Point</string>
    <string name="confirm_MP">Validate</string>
    <string name="MP_removed">Meeting Point removed</string>
    <string name="MP_set">Meeting Point set</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="move_first">Set As Main Image</string>
    <string name="rotate">Rotate Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="invalid_first_name">Please enter a valid first name</string>
    <string name="invalid_last_name">Please enter a valid last name</string>
    <string name="invalid_current_password">Current password incorrect</string>
    <string name="password_updated">Your password has been updated</string>
    <string name="profile_updated">Your profile has been updated</string>
    <string name="MP_ok">Meeting Point defined</string>
    <string name="MP_nok">Meeting Point not defined</string>
    <string name="location_unavailable">Location services are unavailable</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="remove_favorites">Remove from favorites</string>
    <string name="unable_load_image">Unable to load image</string>
    <string name="take_picture_fail">Unable to take picture</string>
    <string name="edit">Edit</string>
    <string name="incorrect_fields">One or more fields are missing</string>
    <string name="default_spinner_text">Select category…</string>
    <string name="object_not_found">This listing was deleted</string>
    <string name="search_title">Search listings</string>
    <string name="search_hint">Search listings</string>
    <string name="no_search_results">No matching results for:</string>
    <string name="no_filter_results">No matching results</string>

    //bottom navigation bar
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_add_item">Add item</string>
    <string name="bottom_navigation_messages">Messages</string>
    <string name="bottom_navigation_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="listing_title">Title</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="upload_image">upload image</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="loading">LOADING</string>
    <string name="meeting_point">Meeting Point</string>
    <string name="add_image">Add Image</string>
    <string name="select_a_category">Select a category</string>
    <string name="currency">CHF</string>
    <string name="none">none</string>
    <string name="default_not_logged_in_message">Please sign in to use this feature</string>
    <string name="sign_up">Sign Up</string>
    <string name="dialog_add_image">Import image from</string>
    <string name="camera">Camera</string>
    <string name="library">Library</string>
    <string name="not_implemented">Unavailable</string>
    <string name="remove_meeting_point">Remove</string>
    <string name="views">Views :</string>
    <string name="type_your_message">Type your message</string>
    <string name="send">Send</string>
    <string name="save_profile">Save Profile</string>
    <string name="my_listings">Listings</string>
    <string name="password">Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="save_password">Save Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_details">Contact Details</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="nickname">Nickname</string>
    <string name="personal_details">Personal Details</string>
    <string name="my_favorites">Favorites</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_picture_not_updated">Failed to update profile picture</string>
    <string name="profile_picture_updated">Profile picture updated</string>publish_picture
    <string name="publish_picture">Your new profile picture will be publicly visible</string>
    <string name="thumbnail">thumbnail</string>
    <string name="seller">Seller</string>
    <string name="deleted_listing">Listing successfully deleted</string>
    <string name="no_connection">No Internet connection</string>send_when_connected
    <string name="send_when_connected">Send as soon as connection is available</string>
    <string name="information">Information</string>sign_in_to_contact
    <string name="fcm_url">https://fcm.googleapis.com/</string>
    <string name="notification_channel_id">notification_channel_id</string>
    <string name="notification_channel_name">notification_channel_name</string>
    <string name="back">Back</string>
    <string name="sign_in_to_contact">Sign In To Contact Seller / Make An Offer</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="sign_in_to_make_offer">Sign in to make an offer</string>
    <string name="buy_now">Buy now</string>
    <string name="accept_offer">Accept Offer</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="offer_invalid">Offer Invalid</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="offer_sent">Offer Sent</string>
    <string name="purchase_offer">"Purchase offer for "</string>
    <string name="you_made_an_offer">"You made an offer at "</string>
    <string name="refuse_offer">Refuse Offer</string>
    <string name="offer_accepted">This offer was accepted</string>
    <string name="offer_for">"Offer for CHF "</string>
    <string name="sold">SOLD</string>
    <string name="zero">0</string>
    <string name="reload">Reload</string>
    <string name="no_account">No account?</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="sign_in_success">Successfully signed in</string>
    <string name="no_match_found">No match found</string>
    <string name="location_not_enabled">Location is not enabled!</string>
    <string name="location_not_granted">Location permission not granted!</string>
    <string name="user_sent_offer">sent you an offer</string>
    <string name="user_answered_offer">answered an offer you made</string>
    <string name="new_message">New message</string>
    <string name="new_offer">New offer</string>
    <string name="offer_answered">Offer answered</string>
    <string name="online_since">Online since</string>
    <string name="days">&#160;days</string>
    <string name="min">min:&#160;</string>
    <string name="max">max:&#160;</string>
    <string name="price_filter">Price:</string>
    <string name="category_filter">Category:</string>
    <string name="days_filter">Online since:</string>
    <string name="CHF">&#160;CHF</string>
    <string name="Select">Select...</string>
    <string name="save">Save</string>
    <string name="field_cant_be_empty">Field cannot be empty</string>
    <string name="password_lowercase">Password should contain at least one lower case letter</string>
    <string name="password_uppercase">Password should contain at least one upper case letter</string>
    <string name="password_digit">Password should contain at least one digit</string>
    <string name="password_too_short">Password should be at least</string>
    <string name="char_long">characters long</string>
    <string name="nickname_too_short">Nickname should be at least</string>
    <string name="nickname_invalid">Nickname should contain at least one letter</string>
    <string name="delete_account">Delete account</string>
    <string name="deleted_account">Your account has been deleted</string>
    <string name="image_capture_failure">The image could not be imported, please try again.</string>
    <string name="online_since_date">Published on : </string>
    <string name="date_missing">date missing</string>
    <string name="n_a">N/A</string>
    <string name="max_num_images">Maximum 10 images</string>
    <string name="price_filter_seekbar">Minimum price cannot be above maximum price</string>

</resources>
