...
                    android:maxLength="50"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nicknameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginTop="@dimen/inter_space_small"
                android:layout_marginEnd="@dimen/inter_space_large"
                app:counterEnabled="true"
...
